shell/desktopview.cpp
@@ -34,7 +34,12 @@ DesktopView::DesktopView(Plasma::Corona *corona, QScreen *targetScreen)
     , m_shellSurface(nullptr)
 {
     QObject::setParent(corona);
-    setColor(Qt::black);
+
+    // Setting clear color to black makes the panel lose alpha channel on X11. This looks like
+    // a QtXCB bug, so set clear color only on Wayland to let the compositor optimize rendering.
+    if (KWindowSystem::isPlatformWayland()) {
+        setColor(Qt::black);
+    }
 
     if (targetScreen) {
         setScreenToFollow(targetScreen);
